GTK4-Konverter_Alpha/header/gtk/gtkwidget.pp


procedure gtk_widget_class_install_action(widget_class:PGtkWidgetClass; action_name:Pchar; parameter_type:Pchar; activate:TGtkWidgetActionActivateFunc);cdecl;external;

procedure gtk_widget_class_install_property_action(widget_class:PGtkWidgetClass; action_name:Pchar; property_name:Pchar);cdecl;external;

function gtk_widget_class_query_action(widget_class:PGtkWidgetClass; index_:Tguint; owner:PGType; action_name:PPchar; parameter_type:PPGVariantType; 
               property_name:PPchar):Tgboolean;cdecl;external;

procedure gtk_widget_action_set_enabled(widget:PGtkWidget; action_name:Pchar; enabled:Tgboolean);cdecl;external;

procedure gtk_widget_class_set_accessible_role(widget_class:PGtkWidgetClass; accessible_role:TGtkAccessibleRole);cdecl;external;

function gtk_widget_class_get_accessible_role(widget_class:PGtkWidgetClass):TGtkAccessibleRole;cdecl;external;



{$endif}


implementation

function GTK_TYPE_WIDGET : longint; { return type might be wrong }
  begin
    GTK_TYPE_WIDGET:=gtk_widget_get_type;
  end;

function GTK_WIDGET(widget : longint) : longint;
begin
  GTK_WIDGET:=G_TYPE_CHECK_INSTANCE_CAST(widget,GTK_TYPE_WIDGET,GtkWidget);
end;

function GTK_WIDGET_CLASS(klass : longint) : longint;
begin
  GTK_WIDGET_CLASS:=G_TYPE_CHECK_CLASS_CAST(klass,GTK_TYPE_WIDGET,GtkWidgetClass);
end;

function GTK_IS_WIDGET(widget : longint) : longint;
begin
  GTK_IS_WIDGET:=G_TYPE_CHECK_INSTANCE_TYPE(widget,GTK_TYPE_WIDGET);
end;

function GTK_IS_WIDGET_CLASS(klass : longint) : longint;
begin
  GTK_IS_WIDGET_CLASS:=G_TYPE_CHECK_CLASS_TYPE(klass,GTK_TYPE_WIDGET);
end;

function GTK_WIDGET_GET_CLASS(obj : longint) : longint;
begin
  GTK_WIDGET_GET_CLASS:=G_TYPE_INSTANCE_GET_CLASS(obj,GTK_TYPE_WIDGET,GtkWidgetClass);
end;

function GTK_TYPE_REQUISITION : longint; { return type might be wrong }
  begin
    GTK_TYPE_REQUISITION:=gtk_requisition_get_type;
  end;


end.
